--- a/component/password-check/check.html
+++ b/component/password-check/check.html
@@ -2,14 +2,25 @@
 <head>
     <title>비밀번호 확인</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./check.js"></script>
 </head>
 <body>
-    <table>
-        <tr><td>비밀번호</td>
-            <td><input type="password" id="pwInput"/></td></tr>
-        <tr><td>비밀번호 확인</td>
-            <td><input type="password" id="pwCheck" onkeyup="checkPw()"/></td></tr>
-    </table>
+    <div class="container">
+        <form name="myform" class="form-group">
+        <div class="row"> 
+            <div class="col">
+                <label>비밀번호</label>
+                <input type="password" id="pwInput" class="form-control"/>
+                <label>비밀번호 확인</label>
+                <input type="password" id="pwCheck" class="form-control" onkeyup="checkPw()"/>
+                <span id="confirm"></span><br>
+                <button type="submit" class="btn btn-primary mb-2">제출하기</button>
+            </div>           
+            <div class="col"></div>
+        </div>
+        </form>
+    </div>
 </body>
 <html>
