--- a/component/password-check/check.html
+++ b/component/password-check/check.html
@@ -5,22 +5,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./check.js"></script>
+    <link rel="stylesheet" type="text/css" href="./check.css">
 </head>
 <body>
     <div class="container">
-        <form name="myform" class="form-group">
-        <div class="row"> 
-            <div class="col">
+        <div class="main">
+            <form name="myform" class="form-group">
                 <label>비밀번호</label>
                 <input type="password" id="pwInput" class="form-control"/>
                 <label>비밀번호 확인</label>
                 <input type="password" id="pwCheck" class="form-control" onkeyup="checkPw()"/>
                 <span id="confirm"></span><br>
                 <button type="submit" class="btn btn-primary mb-2">제출하기</button>
-            </div>           
-            <div class="col"></div>
+            </form>
         </div>
-        </form>
     </div>
 </body>
 <html>
